Test/git-issues-3430/git-issue-3430q.dfy.expect
git-issue-3430q.dfy(5,3): Error: Expected a module name after 'module' or its attributes
git-issue-3430q.dfy(9,40): Error: Expected a module name after 'module' or its attributes
git-issue-3430q.dfy(13,2): Error: Expected a module name after 'module' or its attributes
3 parse errors detected in git-issue-3430q.dfy
